// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Steps/demo/arrow.md correctly 1`] = `
<div
  class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default arco-steps-mode-arrow"
  style="max-width:780px"
>
  <div
    class="arco-steps-item arco-steps-item-finish"
  >
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Succeeded
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-process arco-steps-item-active"
  >
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Processing
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-wait"
  >
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Pending
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/arrow-mini.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-small arco-steps-mode-arrow"
    style="max-width:780px;margin-bottom:20px"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-small arco-steps-mode-arrow"
    style="max-width:780px"
  >
    <div
      class="arco-steps-item arco-steps-item-finish arco-steps-item-next-error"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-error arco-steps-item-active"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/basic.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default"
    style="max-width:780px;margin:0 auto"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-divider arco-divider-horizontal"
    role="separator"
  />
  <div
    style="line-height:140px;text-align:center;color:#C9CDD4"
  >
    Step 2 Content
  </div>
</div>
`;

exports[`renders Steps/demo/change_step.md correctly 1`] = `
<div
  style="max-width:780px"
>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:100%;height:200px;text-align:center;background:var(--color-bg-2);color:#C2C7CC"
  >
    <div
      style="line-height:160px"
    >
      Step1 Content
    </div>
    <div>
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
        disabled=""
        style="padding-left:8px"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-left"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M32 8.4 16.444 23.956 32 39.513"
          />
        </svg>
        <span>
          Back
        </span>
      </button>
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
        style="margin-left:20px;padding-right:8px"
        type="button"
      >
        <span>
          Next
        </span>
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/customDot.md correctly 1`] = `
<div
  style="overflow:hidden;text-align:center"
>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-vertical arco-steps-size-default arco-steps-mode-dot"
    style="margin-top:20px"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon arco-popover-open"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top:40px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      style="padding-left:8px"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
      <span>
        Back
      </span>
    </button>
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      style="margin-left:20px;padding-right:8px"
      type="button"
    >
      <span>
        Next
      </span>
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`renders Steps/demo/description.md correctly 1`] = `
<div
  class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default"
  style="max-width:780px;margin-bottom:40px"
>
  <div
    class="arco-steps-item arco-steps-item-finish"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-check"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M41.678 11.05 19.05 33.678 6.322 20.95"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Succeeded
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-process arco-steps-item-active"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        2
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Processing
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-wait"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        3
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Pending
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/dot.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-vertical arco-steps-size-default arco-steps-mode-dot"
    style="max-width:780px;margin-bottom:40px"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-steps arco-steps-vertical arco-steps-label-horizontal arco-steps-size-default arco-steps-mode-dot"
    style="max-width:780px"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      />
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/error.md correctly 1`] = `
<div
  class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default"
  style="max-width:780px;margin-bottom:40px"
>
  <div
    class="arco-steps-item arco-steps-item-finish arco-steps-item-next-error"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-check"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M41.678 11.05 19.05 33.678 6.322 20.95"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Succeeded
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-error arco-steps-item-active"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Processing
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-wait"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        3
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Pending
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/icon.md correctly 1`] = `
<div
  class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default"
>
  <div
    class="arco-steps-item arco-steps-item-finish arco-steps-item-custom"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-home"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M7 17 24 7l17 10v24H7V17Z"
          />
          <path
            d="M20 28h8v13h-8V28Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Succeeded
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-process arco-steps-item-custom arco-steps-item-active"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Processing
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-wait arco-steps-item-custom"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-thumb-up"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Pending
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/label-placement.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-vertical arco-steps-size-default"
    style="max-width:780px;margin:0 auto"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-divider arco-divider-horizontal"
    role="separator"
  />
  <div
    style="line-height:140px;text-align:center;color:#C9CDD4"
  >
    Step 2 Content
  </div>
</div>
`;

exports[`renders Steps/demo/lineless.md correctly 1`] = `
<div
  class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default arco-steps-lineless"
  style="max-width:780px;margin-bottom:40px"
>
  <div
    class="arco-steps-item arco-steps-item-finish"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-check"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M41.678 11.05 19.05 33.678 6.322 20.95"
          />
        </svg>
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Succeeded
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-process arco-steps-item-active"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        2
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Processing
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="arco-steps-item arco-steps-item-wait"
  >
    <div
      class="arco-steps-item-icon"
    >
      <div
        class="arco-steps-icon"
      >
        3
      </div>
    </div>
    <div
      class="arco-steps-item-content"
    >
      <div
        class="arco-steps-item-title"
      >
        Pending
      </div>
      <div
        class="arco-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/mini.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-small"
    style="max-width:780px;margin:0 auto"
  >
    <div
      class="arco-steps-item arco-steps-item-finish"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-divider arco-divider-horizontal"
    role="separator"
  />
  <div
    style="line-height:140px;text-align:center;color:#C9CDD4"
  >
    Step 2 Content
  </div>
</div>
`;

exports[`renders Steps/demo/navigation.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default arco-steps-change-onclick arco-steps-mode-navigation"
    style="width:780px;margin-bottom:60px"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-small arco-steps-change-onclick arco-steps-mode-navigation"
    style="width:780px;margin-bottom:60px"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default arco-steps-change-onclick arco-steps-mode-navigation"
    style="width:780px"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/onchange.md correctly 1`] = `
<div>
  <div
    class="arco-steps arco-steps-horizontal arco-steps-label-horizontal arco-steps-size-default arco-steps-change-onclick"
    style="margin-bottom:20px"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-steps arco-steps-vertical arco-steps-label-horizontal arco-steps-size-default arco-steps-change-onclick"
  >
    <div
      class="arco-steps-item arco-steps-item-process arco-steps-item-active"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          1
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Succeeded
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          2
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Processing
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
    <div
      class="arco-steps-item arco-steps-item-wait"
    >
      <div
        class="arco-steps-item-tail"
      />
      <div
        class="arco-steps-item-icon"
      >
        <div
          class="arco-steps-icon"
        >
          3
        </div>
      </div>
      <div
        class="arco-steps-item-content"
      >
        <div
          class="arco-steps-item-title"
        >
          Pending
        </div>
        <div
          class="arco-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Steps/demo/vertical.md correctly 1`] = `
<div
  style="display:flex;max-width:780px;padding:40px;background:var(--color-fill-2)"
>
  <div
    style="background:var(--color-bg-2);padding:24px;height:272px;border-right:1px solid var(--color-border);box-sizing:border-box"
  >
    <div
      class="arco-steps arco-steps-vertical arco-steps-label-horizontal arco-steps-size-default arco-steps-lineless"
      style="width:170px"
    >
      <div
        class="arco-steps-item arco-steps-item-process arco-steps-item-active"
      >
        <div
          class="arco-steps-item-icon"
        >
          <div
            class="arco-steps-icon"
          >
            1
          </div>
        </div>
        <div
          class="arco-steps-item-content"
        >
          <div
            class="arco-steps-item-title"
          >
            Succeeded
          </div>
          <div
            class="arco-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
      <div
        class="arco-steps-item arco-steps-item-wait"
      >
        <div
          class="arco-steps-item-icon"
        >
          <div
            class="arco-steps-icon"
          >
            2
          </div>
        </div>
        <div
          class="arco-steps-item-content"
        >
          <div
            class="arco-steps-item-title"
          >
            Processing
          </div>
          <div
            class="arco-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
      <div
        class="arco-steps-item arco-steps-item-wait"
      >
        <div
          class="arco-steps-item-icon"
        >
          <div
            class="arco-steps-icon"
          >
            3
          </div>
        </div>
        <div
          class="arco-steps-item-content"
        >
          <div
            class="arco-steps-item-title"
          >
            Pending
          </div>
          <div
            class="arco-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:100%;height:272px;text-align:center;background:var(--color-bg-2);color:#C2C7CC"
  >
    <div
      style="line-height:200px"
    >
      Step1 Content
    </div>
    <div>
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
        disabled=""
        style="padding-left:8px"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-left"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M32 8.4 16.444 23.956 32 39.513"
          />
        </svg>
        <span>
          Back
        </span>
      </button>
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
        style="margin-left:20px;padding-right:8px"
        type="button"
      >
        <span>
          Next
        </span>
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
